attempt for creating table

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,8 +7,27 @@
     </head>
 
     <body>
+
+        <table>
+            <tr>
+                <th>User name</th>
+                <th>Trip Count</th>
+                <th>Careem Coin</th>
+            </tr>
+            <div class="users"></div>
+        </table>
+
         <div>
             <p class="wallet-value">Wallet value is </p>
         </div>
+
+        <form>
+            <select class="trip">
+                <div class="users-options"></div>
+            </select>
+            <input type="text" value="Distance Km">
+            <input type="submit" value="Simulate Trip">
+        </form>
+
     </body>
 </html>
